<resources>
    <string name="app_name">Medidors</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_password_confirm">Confirmar Contraseña</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_sign_up">Registrarse</string>
    <string name="error_invalid_email">Email inválido</string>
    <string name="error_invalid_user">Usuario inválido</string>
    <string name="error_used_username">Usuario en uso</string>
    <string name="error_used_email">Email en uso</string>
    <string name="error_invalid_password">Contraseña demasiado corta</string>
    <string name="error_incorrect_password">Contraseña incorrecta</string>
    <string name="error_incorrect_confrim">Las contraseñas no coinciden</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="prompt_email_or_username">Email o Usuario</string>
    <string name="title_activity_edit_recibo">Recibo</string>
    <string name="action_cancel">Cancelar</string>
    <string name="action_save">Guardar</string>
    <string name="title_activity_historial">Historial</string>
    <string name="title_activity_edit_location">Localización</string>
    <string name="title_activity_edit_profile">Profile</string>
    <string name="title_activity_edit_password">Cambiar Contraseña</string>
    <string name="title_activity_lectura_manual">Calculadora</string>
    <string name="title_activity_calculate">Calculo</string>
    <string name="title_activity_consejos">Consejos para ahorrar energía</string>
    <string name="title_activity_map">Centros de Atención</string>
    <string name="title_activity_calculator_settings">Ajustes de calculadora</string>
</resources>