<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.offapps.off.UI.LoginActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="2dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardElevation="8dp"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/app_text_view"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:layout_centerHorizontal="true"
                android:textSize="36sp"
                android:layout_marginBottom="16dp"
                android:drawableLeft="@mipmap/ic_launcher"
                android:drawableStart="@mipmap/ic_launcher"
                android:drawablePadding="8dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/app_text_view">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/email_field"
                    android:hint="@string/prompt_email_or_username"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_layout_user">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/password_field"
                    android:hint="@string/prompt_password"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_layout_password"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:id="@+id/linear_layout_buttons">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_sign_in"
                    android:id="@+id/login_button"
                    android:background="@drawable/button_shape_log"
                    android:textSize="18sp"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_sign_up"
                    android:id="@+id/sign_up_button"
                    android:background="@drawable/button_shape"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height=".25dp"
                android:id="@+id/divider"
                android:background="@android:color/darker_gray"
                android:layout_below="@id/linear_layout_buttons"
                android:layout_marginTop="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/orTextView"
                android:text="Or login using:"
                android:layout_below="@id/divider"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/linear_layout_social"
                android:layout_below="@id/orTextView"
                android:layout_marginTop="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/twitterLogIn"
                    android:layout_weight="1"
                    android:tint="@color/twitterColor"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:tint="@color/facebookColor"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:tint="@color/googleplusColor"/>

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>